--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,9 @@
   <div class="footer__inner">
     <!-- ロゴ -->
     <div class="footer__logo">
-      <a href="/"><img src="/assets/img/logo/ib_logo-white.svg" alt="InsightBase Lite" /></a>
+      <a href="/"
+        ><img src="/assets/img/logo/ib_logo-white.svg" alt="InsightBase" /></a
+      >
     </div>
 
     <!-- ナビ -->
@@ -10,7 +12,10 @@
       <!-- 左 -->
       <ul class="footer__list">
         <li><a href="/ga4-report-template/">GA4レポートテンプレート</a></li>
-        <li><a href="/googlead-report-template/">Google広告レポートテンプレート</a></li>
+        <li>
+          <a href="/googlead-report-template/"
+            >Google広告レポートテンプレート</a>
+        </li>
         <li><a href="/column">ナレッジベース</a></li>
       </ul>
 
@@ -33,6 +38,4 @@
   <div class="footer__copyright">
     <p>Copyright © ビザップ株式会社 All Rights Reserved.</p>
   </div>
-
-
 </footer>
