--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
 ---
 
 <Layout
-  title="完全買切り Looker Studioテンプレート｜GA4・Google広告対応｜InsightBase Lite"
+  title="完全買切り Looker Studioテンプレート｜GA4・Google広告対応｜InsightBase"
 >
   <Hero
     hasBg={true}
@@ -29,21 +29,26 @@ import Footer from "../components/Footer.astro";
       <img src="/assets/img/logo/ib_logo.svg" alt="InsightBase Logo" />
       <h2 class="section__title">レポート作成の課題、解決します。</h2>
       <p>
-        InsightBase
-        Liteは、そんなレポート作成の「非効率」を仕組みで解決する、Looker
+        InsightBaseは、そんなレポート作成の「非効率」を仕組みで解決する、Looker
         Studio用のテンプレートです。<br />
-        InsightBase Liteを導入することで、以下のような課題を即座に解決し、レポート作成に奪われていた時間を改善提案の時間へと変えます。
+        InsightBaseを導入することで、以下のような課題を即座に解決し、レポート作成に奪われていた時間を改善提案の時間へと変えます。
       </p>
     </div>
     <div class="lead__features --pt20">
       <div class="lead__feature">
-        <img src="/assets/img/nayami01.svg" alt="レポート作成の課題01「レポート作成に時間がとられすぎ」" />
+        <img
+          src="/assets/img/nayami01.svg"
+          alt="レポート作成の課題01「レポート作成に時間がとられすぎ」"
+        />
         <h3>レポート作成に時間がとられすぎ</h3>
         <p>レポート作成にかなりの時間がかかり、本来の業務に手が回らない。</p>
       </div>
 
       <div class="lead__feature">
-        <img src="/assets/img/nayami02.svg" alt="レポート作成の課題02「数字だけのレポートでは刺さらない」" />
+        <img
+          src="/assets/img/nayami02.svg"
+          alt="レポート作成の課題02「数字だけのレポートでは刺さらない」"
+        />
         <h3>数字だけのレポートでは刺さらない</h3>
         <p>
           せっかくまとめた集計データも、数字の羅列だけでクライアントの反応が薄い。
@@ -51,13 +56,19 @@ import Footer from "../components/Footer.astro";
       </div>
 
       <div class="lead__feature">
-        <img src="/assets/img/nayami03.svg" alt="レポート作成の課題03「レポートの体裁を整えるのが大変」" />
+        <img
+          src="/assets/img/nayami03.svg"
+          alt="レポート作成の課題03「レポートの体裁を整えるのが大変」"
+        />
         <h3>レポートの体裁を整えるのが大変</h3>
         <p>レイアウト調整に時間がかかり、中身より見た目に労力を使っている。</p>
       </div>
 
       <div class="lead__feature">
-        <img src="/assets/img/nayami04.svg" alt="レポート作成の課題04「案件ごとにフォーマットがバラバラ」" />
+        <img
+          src="/assets/img/nayami04.svg"
+          alt="レポート作成の課題04「案件ごとにフォーマットがバラバラ」"
+        />
         <h3>案件ごとにフォーマットがバラバラ</h3>
         <p>クライアントごとに形式が違い、毎回ゼロから作り直している。</p>
       </div>
@@ -137,7 +148,7 @@ import Footer from "../components/Footer.astro";
       </p>
     </div>
     <div class="image-l">
-      <img src="/assets/img/pc-image.png" alt="レポート自動化画面"/>
+      <img src="/assets/img/pc-image.png" alt="レポート自動化画面" />
     </div>
   </div>
 </section>
