--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -10,7 +10,7 @@
           alt="GA4レポートテンプレート"
         />
         <p>17,600円（税込）</p>
-        <a href="https://buy.stripe.com/fZucN58AUgoC06u9439Zm02" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="ga4cta"
+        <a href="https://buy.stripe.com/fZucN58AUgoC06u9439Zm02" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="ga4cta" target="_blank"
           >今すぐ購入する</a
         >
       </div>
@@ -22,7 +22,7 @@
           alt="Google広告レポートテンプレート"
         />
         <p>17,600円（税込）</p>
-        <a href="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="gadcta"
+        <a href="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="gadcta" target="_blank"
           >今すぐ購入する</a
         >
       </div>
@@ -31,7 +31,7 @@
         <h3>GA4＋Google広告レポート</h3>
         <img src="/assets/img/screenshot/set.jpg" alt="GA4＋Google広告レポート" />
         <p>29,800円（税込）</p>
-        <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="setcta"
+        <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="setcta" target="_blank"
           >今すぐ購入する</a
         >
       </div>
