--- a/src/pages/ga4-report-template.astro
+++ b/src/pages/ga4-report-template.astro
@@ -182,12 +182,12 @@ const productJsonLd = {
   <div class="content__inner">
     <div class="cta-btn">
       <p>17,600円（税込）</p>
-      <a href="https://buy.stripe.com/fZucN58AUgoC06u9439Zm02" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="ga4cta">今すぐ購入する</a>
+      <a href="https://buy.stripe.com/fZucN58AUgoC06u9439Zm02" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="ga4cta" target="_blank" rel="noopener noreferrer">今すぐ購入する</a>
     </div>
     <div class="cta-btn --pt20">
         <p class="--pt20">GA4＋Google広告レポートテンプレート</p>
       <p>29,800円（税込）</p>
-      <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="setcta">今すぐ購入する</a>
+      <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="setcta" target="_blank" rel="noopener noreferrer">今すぐ購入する</a>
     </div>
     <p class="--pt50">購入ボタンをクリックすると、決済代行サービス Stripe の決済画面へ移動します。<br>クレジットカード情報などの決済情報はStripeが暗号化して処理し、当社が保持することはありません。</p>
   </div>
