--- a/src/pages/googlead-report-template.astro
+++ b/src/pages/googlead-report-template.astro
@@ -194,7 +194,7 @@ const productJsonLd = {
         href="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03"
         class="herobtn btn--blue btn--cubic-blue"
         data-event="purchase_click"
-        data-product="gadcta">今すぐ購入する</a
+        data-product="gadcta" target="_blank" rel="noopener noreferrer">今すぐ購入する</a
       >
     </div>
     <div class="cta-btn --pt20">
@@ -202,7 +202,7 @@ const productJsonLd = {
       <p>29,800円（税込）</p>
       <a
         href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01"
-        class="herobtn btn--green btn--cubic-green">今すぐ購入する</a
+        class="herobtn btn--green btn--cubic-green" target="_blank" rel="noopener noreferrer">今すぐ購入する</a
       >
     </div>
  <p class="--pt50">購入ボタンをクリックすると、決済代行サービス Stripe の決済画面へ移動します。<br>クレジットカード情報などの決済情報はStripeが暗号化して処理し、当社が保持することはありません。</p>
