--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,6 +16,7 @@
           <a href="/googlead-report-template/"
             >Google広告レポートテンプレート</a>
         </li>
+        <li><a href="/custom-setting-service/">カスタム・設定代行サービス</a></li>
         <li><a href="/column">ナレッジベース</a></li>
       </ul>
 
