--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -156,6 +156,7 @@ const pageJsonLd = {
         <nav class="site-nav" id="site-nav">
           <a class="" href="/ga4-report-template">GA4レポート</a>
           <a class="" href="/googlead-report-template">Google広告レポート</a>
+          <a class="" href="/custom-setting-service">カスタム・設定代行</a>
           <a class="" href="/faq">よくあるお問い合わせ</a>
           <a class="" href="/column">ナレッジベース</a>
           <a class="btn primary" href="/inquiry">お問い合わせ</a>
