--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@
             >Google広告レポートテンプレート</a>
         </li>
         <li><a href="/custom-setting-service/">カスタム・設定代行サービス</a></li>
-        <li><a href="/column">ナレッジベース</a></li>
+        <li><a href="/knowledge">ナレッジベース</a></li>
       </ul>
 
       <!-- 中央 -->
