--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const {
 
 const baseUrl = Astro.site ?? Astro.url;
 const isColumnPage =
-  Astro.url.pathname === "/column" || Astro.url.pathname.startsWith("/column/");
+  Astro.url.pathname === "/knowledge" || Astro.url.pathname.startsWith("/knowledge/");
 const siteRootUrl = new URL("/", baseUrl).toString();
 const organizationUrl = "https://bizup-inc.co.jp";
 const organizationLogoUrl = new URL(
@@ -158,7 +158,7 @@ const pageJsonLd = {
           <a class="" href="/googlead-report-template">Google広告レポート</a>
           <a class="" href="/custom-setting-service">カスタム・設定代行</a>
           <a class="" href="/faq">よくあるお問い合わせ</a>
-          <a class="" href="/column">ナレッジベース</a>
+          <a class="" href="/knowledge">ナレッジベース</a>
           <a class="btn primary" href="/inquiry">お問い合わせ</a>
         </nav>
       </div>
