--- a/src/components/ColumnArticle.astro
+++ b/src/components/ColumnArticle.astro
@@ -26,7 +26,7 @@ const eyecatchUrl = getEyecatchUrl(article.eyecatch);
         <nav class="column-breadcrumb" aria-label="パンくずリスト">
           <a href="/">TOP</a>
           <span>/</span>
-          <a href="/knowledge">コラム一覧</a>
+          <a href="/knowledge">ナレッジベース</a>
           {firstTag && (
             <>
               <span>/</span>
