--- a/src/styles/_column.scss
+++ b/src/styles/_column.scss
@@ -688,3 +688,13 @@
   padding:20px;
   margin:20px 0;
 }
+
+.sankou-link a{
+  color:var(--blue);
+  font-weight:700;
+  transition:0.3s;
+
+  &:hover{
+    color:var(--lblue);
+  }
+}
