--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -83,7 +83,7 @@ const pageJsonLd = {
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/assets/img/logo/favicon.png" />
+    <link rel="icon" href="/assets/img/logo/ib_icon.jpg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <meta name="description" content={description} />
