--- a/src/components/ColumnArticle.astro
+++ b/src/components/ColumnArticle.astro
@@ -61,6 +61,6 @@ const eyecatchUrl = getEyecatchUrl(article.eyecatch);
       <Author />
     </article>
 
-    <Sidebar />
+    <Sidebar currentSlug={article.slug} />
   </div>
 </section>
