--- a/src/pages/knowledge/[slug].astro
+++ b/src/pages/knowledge/[slug].astro
@@ -149,6 +149,7 @@ const relatedArticles = (
   {relatedArticles.length > 0 && (
     <section class="column-related">
       <div class="content__inner">
+      <div class="--pt50"></div>
         <h2>関連記事</h2>
         <div class="column-related__cards">
           {relatedArticles.map((item) => (
